using Microsoft.AspNetCore.Identity;

namespace MazeGameBlazor.Database.Models
{
    public class Role : IdentityRole
    {
        
    }

}
